# jamelao

./: .gitignore  README.md  compose.yaml
.github/workflows/: ci-raiz.yaml  ci.yaml  ci.yml  lint.yaml
raiz/: .gitignore  README.md  main.py  pyproject.toml  raiz.py  ro.py  test_main.py  test_raiz.py
raiz/raiz/: __init__.py  __main__.py  cli.py  core.py  indeed.py  remoteok.py
raiz/src/domain/contratos/: __init__.py  captura_html_raw.py
raiz/src/raiz/: __main__.py  chave.py  core.py  provedores.py  remoteok.py
raiz/tests/: test_contratos_captura.py  test_core.py  test_raiz.py  test_remoteok.py  test_remoteok_parsing.py
