[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[project]
name = "raiz"
version = "0.0.1"
requires-python = ">=3.12,<3.13"
dependencies = [
    "beautifulsoup4==4.14.3",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/raiz", "src/domain"]
