[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[project]
name = "raiz"
version = "0.0.1"
requires-python = "~=3.12.0"
dependencies = [
    "beautifulsoup4==4.14.3",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/raiz"]